# django-polars-tools

./: README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yml  publish-pypi.yml  publish-test-pypi.yml  test.yml
src/django_polars_tools/: __init__.py  main.py
tests/: settings.py  test_django.py  test_hypothesis.py
